# dtasm

./: Makefile
lib/dtasm_abi/: Cargo.toml
lib/dtasm_abi/src/: lib.rs
lib/dtasm_base_rs/: Cargo.toml
lib/dtasm_base_rs/src/: model_conversion.rs  types.rs
lib/dtasm_base_rs_nostd/: Cargo.toml
lib/dtasm_base_rs_nostd/src/: lib.rs  model_conversion.rs  model_description.rs  types.rs
lib/dtasm_rs/: Cargo.toml
lib/dtasm_rs/src/: lib.rs
module/add_rs_nostd/: Cargo.toml  README.md
module/add_rs_nostd/src/: add_types.rs  adder.rs  dtasm.rs  errors.rs  interface.rs  lib.rs  modelDescription.json
runtime/dtasmtime/: Cargo.toml
runtime/dtasmtime/src/: runtime.rs
